Fix some style issues

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 						</p>
 					</section>
 					<section>
-						<h2>De qué va todo esto?</h2>
+						<h2>¿De qué va todo esto?</h2>
 						<pre>
 							<code contenteditable class="python">
 <span>class MiClase():
@@ -159,7 +159,7 @@ funcion("Estoy decorada ^^")</span>
 							</code></pre>
 					</section>
 					<section>
-						<h2>Vale, pero... para qué quiero yo eso?</h2>
+						<h2>Vale, pero... ¿para qué quiero yo eso?</h2>
 					</section>
 					<section>
 						<h2>Ejemplo de decoradores</h2>
@@ -328,7 +328,9 @@ def suma(a,b):
 					</section>
 					<section>
 						<h2>¿Y cómo busca Python?</h2>
-						<p>cuando llamas a un método, estás llamando a objeto.__getattribute__("nombre del metodo")</p>
+						<p>cuando llamas a un método, estás llamando a <pre><code class="python"><span>
+objeto.__getattribute__("nombre del metodo")
+						</span></code></pre></p>
 						<h3 class="fragment" data-fragment-index='0'>Vamos a sobreescribirlo!!</h3>
 					</section>
 					<section>
@@ -365,6 +367,10 @@ def suma(a,b):
 						<small>Salvador Pérez Martín / <a href="http://twitter.com/kuraikibo">@kuraikibo</a></small><br/>
 						<small><a href="mailto:salva@acm.asoc.fi.upm.es">salva@acm.asoc.fi.upm.es</a></small>
 					</p>
+				</section>
+				<section>
+					<h2>¿Preguntas?</h2>
+					<p>Descárgate estas transparencias:<a href="https://github.com/kuraime/metaprogramacion-acmfi">https://github.com/kuraime/metaprogramacion-acmfi</a></p>
 				</section>
 			</div>
 
